--- a/WarehouseEcommerce/Views/Theme/University/Orders/Payments/_CartItems.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/Payments/_CartItems.cshtml
@@ -34,7 +34,7 @@
                                             }
                                         }
                                         <br />
-                                        <a href="#" class="text-pink mt-2 small"><i class="fa fa-heart"></i> Add to Wishlist</a>
+                                        <a href="#" class="text-secondary mt-2 small wishlist-prod" data-prodid="@item.ProductId"><i class="fa fa-heart"></i> Add to Wishlist</a>
                                     </span>
                                 </div>
                             </div>
