Forgot password changes for warehouse zone with API to achieve same

--- a/WMS/Content/Theme/Default/Site.css
+++ b/WMS/Content/Theme/Default/Site.css
@@ -2049,3 +2049,36 @@ input[type=text].serial {
         margin: 2px 1px;
     }
 }
+
+
+.login {
+    width: 40%;
+    margin: auto;
+    background-color: #eceef1;
+    padding: 20px 50px;
+    min-width: 600px;
+}
+
+.bg-angle {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background: #eceef1 !important;
+    padding: 30px;
+    -webkit-clip-path: polygon(0 0, 100% 2%, 100% 98%, 0 100%);
+    clip-path: polygon(0 0, 100% 2%, 100% 98%, 0 100%);
+}
+
+.bg-angle .btn {
+    border: 1px solid #fff;
+}
+.bg-angle label {
+    color: black;
+}
+    .bg-angle .form-control {
+        border-color: #ff9500 !important;
+    }
+
+.validation-summary-errors {
+    color: red;
+}
+ 
