--- a/WMS/Views/Theme/Default/User/Login.cshtml
+++ b/WMS/Views/Theme/Default/User/Login.cshtml
@@ -48,7 +48,8 @@
         </div>
 
         <div class="bottom-right">
-            <input type="submit" value="Submit" class="btn btn-default" />
+            <a href="@Url.Action("ForgotPassword","Account")" class="btn btn-default">Forgot Password</a>
+            <input type="submit" value="Submit" class="btn btn-default"/>
         </div>
     </div>
 
