--- a/WarehouseEcommerce/Views/Theme/University/Orders/Payments/ReviewOrder.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/Payments/ReviewOrder.cshtml
@@ -2,7 +2,8 @@
 @model Ganedata.Core.Entities.Domain.ReviewOrderViewModel
 @{
     ViewBag.Title = "Review Order";
-    var address = Model.Cart.ShippmentAddresses.FirstOrDefault(p => p.AddTypeShipping == true);
+    var address = Model.ShippingAddresses.FirstOrDefault(p => p.AddressID == Model.ShippingAddressId);
+    var billingAddress = Model.BillingAddresses.FirstOrDefault(p => p.AddressID == Model.BillingAddressId);
 }
 
 <section class="nb_sec nb_prdlisting_pgsec nb_sec_pb">
@@ -27,15 +28,30 @@
 
                 <div class="mb-4 col-12">
                     <div class="row">
-                        <div class="col botomBtnsec justify-content-start"><a class="btmbtn sho" href="@Url.Action("List", "Products")">CONTINUE SHOPPING</a></div>
-                        <div class="col text-center"><h5 class="font-weight-bold header-ul-center-pink">REVIEW ORDER</h5></div>
-                        <div class="col text-right botomBtnsec justify-content-end"><button type="Submit" class="btmbtn pro">PROCEED TO PAYMENT</button></div>
+                        <div class="col-lg-4 order-lg-2 form-group order-xl-2 text-center d-inline-flex align-items-end justify-content-center"><h5 class="font-weight-bold header-ul-center-pink">REVIEW ORDER</h5></div>
+                        <div class="col-lg-4 order-lg-1 order-xl-1 botomBtnsec justify-content-start"><a class="btmbtn sho" href="@Url.Action("List", "Products")">CONTINUE SHOPPING</a></div>
+                        <div class="col-lg-4 order-lg-3 order-xl-3 text-right">
+                            @if (Model.ShippingAddressId > 0 && Model.BillingAddressId > 0)
+                            {
+                                using (Html.BeginForm("OrderPayment", "Orders", FormMethod.Post, new { id = "formGoToPayments", @class = "botomBtnsec justify-content-end" }))
+                                {
+                                    <input type="hidden" name="BillingAddressId" value="@Model.BillingAddressId" />
+                                    <input type="hidden" name="ShippingAddressId" value="@Model.ShippingAddressId" />
+                                    <input type="hidden" name="IsStandardDelivery" value="@(Model.IsStandardDelivery?"True":"False")" />
+                                    <button type="submit" class="btmbtn pro">PROCEED TO PAYMENT</button>
+                                }
+                            }
+                            else
+                            {
+                                <button type="button" disabled class="btmbtn">PROCEED TO PAYMENT</button>
+                            }
+                        </div>
                     </div>
                 </div>
 
-                <div class="bg-light p-3">
+                <div class="bg-light p-3 col-12">
                     <div class="row">
-                        <div class="col">
+                        <div class="col-lg-4 mt-2">
                             <h6 class="mb-2">Delivery Address <a href="#" id="linkChangeDelAddress" class="text-pink small">@(address==null?"Add": "Change")</a></h6>
                             <div id="pDelAddress">
                                 @if (address != null)
@@ -48,42 +64,53 @@
                                 {
                                     <span>Not available</span>
                                 }
-                                <a href="#" style="@(address != null?"":"display:none;")" class="text-pink small">Add Delivery instruction</a>
+                            </div>
+                            <div id="divDelInstruct">
+                                @if (!string.IsNullOrEmpty(Model.DeliveryInstruction))
+                                {
+                                    <h6 class="mt-2">Delivery Instruction <a href="#" class="text-pink small" id="linkEditDelInstruct">Edit</a></h6>
+                                    <p>@Model.DeliveryInstruction</p>
+                                }
+                                else
+                                {
+                                    <a href="#" style="@(address != null?"":"display:none;")" class="text-pink small" id="linkAddDelInstruct">Add Delivery instruction</a>
+                                }
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col-lg-4 mt-2">
                             <h6 class="mb-2">
                                 Billing Address
-                                <a href="#" id="linkChangeBillAddress" class="text-pink small link-bill" style="@(address != null?"":"display:none;")">Change</a>
+                                <a href="#" id="linkChangeBillAddress" class="text-pink small link-bill">@(billingAddress == null?"Add": "Change")</a>
                             </h6>
-                            <p id="pBillAddress">
-                                @if (address != null)
+                            <div id="pBillAddress">
+                                @if (billingAddress != null)
                                 {
-                                    @Html.Partial("_AddressDetail", address)
+                                    @Html.Partial("_AddressDetail", billingAddress)
                                 }
                                 else
                                 {
                                     <span>Not available </span>
                                 }
-                            </p>
+                            </div>
                         </div>
-                        <div class="col">
+                        <div class="col-lg-4 mt-2">
                             <h6 class="mb-2">Delivery Options</h6>
                             <div class="mb-3">
                                 <div class="d-flex align-items-center">
-                                    <input type="radio" name="IsStandardDelivery" id="DeliveryOpt1" @(!Model.IsStandardDelivery ? "checked" : "") /> <label for="DeliveryOpt1">Next Day Delivery &pound;<span>@Model.NextDayDeliveryCost</span></label>
+                                    <input type="radio" name="IsStandardDelivery" data-isstand="False" value="@Model.NextDayDeliveryCost" id="DeliveryOpt1" @(!Model.IsStandardDelivery ? "checked" : "") /> <label for="DeliveryOpt1">Next Day Delivery &pound;<span>@Model.NextDayDeliveryCost</span></label>
                                 </div>
                                 <div class="d-flex align-items-center">
-                                    <input type="radio" name="IsStandardDelivery" id="DeliveryOpt2" @(Model.IsStandardDelivery ? "checked" : "") /> <label for="DeliveryOpt2">Standard Delivery &pound;<span>@Model.StandardDeliveryCost</span> (2 to 5 working days)</label>
+                                    <input type="radio" name="IsStandardDelivery" data-isstand="True" value="@Model.StandardDeliveryCost" id="DeliveryOpt2" @(Model.IsStandardDelivery ? "checked" : "") /> <label for="DeliveryOpt2">Standard Delivery &pound;<span>@Model.StandardDeliveryCost</span> (2 to 5 working days)</label>
                                 </div>
                             </div>
-                            <div class="d-flex">
-                                <div class="mr-4">
+                            <div class="row d-flex">
+                                <div class="col-lg-8">
                                     <h6>Total Cost</h6>
                                     <div>(Including delivery charges)</div>
                                 </div>
-
-                                <h5 class="text-pink">&pound;@Model.CartTotalAmount</h5>
+                                <div class="col-lg-4">
+                                    <h4 class="text-pink">&pound;<span id="spnTotalAmount" data-total="@Model.CartTotalAmount">@(Model.CartTotalAmount + (Model.IsStandardDelivery ? Model.StandardDeliveryCost : Model.NextDayDeliveryCost))</span></h4>
+                                </div>                                
                             </div>
                         </div>
                     </div>
@@ -96,22 +123,40 @@
                     <!-- Modal content-->
                     <div class="modal-content basket-modal-content">
                         <div class="modal-body pl-3 pr-3">
-                            <button type="button" class="close mt-3" data-dismiss="modal">&times;</button>                            
+                            <button type="button" class="close mt-3" data-dismiss="modal">&times;</button>
                             <div id="divAddressSection" class="content-add">
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>            
+            </div>
+
+            <div class="modal fade basket-modal" id="modalDelInstruct" role="dialog">
+                <div class="modal-dialog modal-lg">
+                    <!-- Modal content-->
+                    <div class="modal-content basket-modal-content">
+                        <div class="modal-body pl-3 pr-3">
+                            <button type="button" class="close mt-3" data-dismiss="modal">&times;</button>
+                            <h5 class="header-ul-left-pink mb-4 p-3 clearfix">Delivery Instruction</h5>
+                            <form id="formDelInstruct" class="col-12">
+                                <textarea id="txtDelInstruct" class="form-control" required placeholder="Enter your delivery instructions">@Model.DeliveryInstruction</textarea>
+                                <div class="botomBtnsec">
+                                    <button type="button" class="btmbtn pro" id="btnSaveDelInstruct">Save</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         }
 
-        <div class="mt-4" id="updateCart">
+        <div class="mt-4 col-12" id="updateCart">
             @Html.Partial("Payments/_CartItems", Model.Cart)
         </div>
 
         @if (Model.RelatedProducts != null && Model.RelatedProducts.Any())
         {
-            <div class="mt-10">
+            <div class="mt-10 col-12">
                 <h5 class="text-center font-weight-bold">RELATED PRODUCTS</h5>
                 @Html.Partial("~/Views/Theme/University/Products/_RelatedProducts.cshtml", Model.RelatedProducts)
             </div>
@@ -122,7 +167,7 @@
 <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 <script>
     $(function () {
-        $("#linkChangeDelAddress,#linkChangeBillAddress").click(function () {            
+        $("#linkChangeDelAddress,#linkChangeBillAddress").click(function () {
             startLoading();
             $.ajax({
                 url: '@Url.Action("GetAddressForm", "Orders")',
@@ -135,6 +180,29 @@
                     $("#divAddressSection").html(data);
                 }
             });
+            return false;
+        });
+
+        $("#linkAddDelInstruct,#linkEditDelInstruct").click(function () {
+            $("#modalDelInstruct").modal("show");
+            return false;
+        });
+
+        $("#btnSaveDelInstruct").click(function () {
+            $("#formDelInstruct").validate();
+            if ($("#formDelInstruct").valid()) {
+                startLoading();
+                $.ajax({
+                    url: '@Url.Action("CaptureDeliveryInstruction", "Orders")',
+                    method: 'get',
+                    data: { instruction: $("#txtDelInstruct").val() },
+                    dataType: 'html',
+                    success: function (data) {
+                        stopLoading();
+                        window.location.reload();
+                    }
+                });
+            }
             return false;
         });
 
@@ -161,18 +229,32 @@
             var rb = $(this).closest("#divSavedAddSection").find("input[type='radio']:checked:eq(0)")
             var addId = rb.val();
             if (addId > 0) {
-                debugger;
-                $(rb.data("isbilling") == "True" ? "#pBillAddress" : "#pDelAddress").html(rb.closest(".card-body").find(".address-det:eq(0)").clone().html());
-                $(this).closest(".modal").find("button.close").trigger("click");
-
-                if (rb.data("isbilling") == "True")
-                    $("#linkChangeBillAddress").show();
-                $("#linkChangeDelAddress").text("Change");
+                startLoading();
+                $.ajax({
+                    url: '@Url.Action("CaptureAddress", "Orders")',
+                    method: 'get',
+                    data: { addressId: addId, isBillingAddress: rb.data("isbilling") == "True" },
+                    dataType: 'html',
+                    success: function (data) {
+                        stopLoading();
+                        window.location.reload();
+                    }
+                });
             }
             return false;
         });
 
-        $(".wishlist-prod").click(function () {
+        $("input[name='IsStandardDelivery']").click(function () {
+            if ($(this).is(":checked")) {
+                var costOfDel = $(this).val();
+                var cartTotal = $("#spnTotalAmount").data("total");
+                $("#spnTotalAmount").text(parseInt(costOfDel) + parseInt(cartTotal));
+
+                $("#formGoToPayments input[name='IsStandardDelivery']").val($(this).data("isstand"));
+            }
+        });
+
+        @*$(".wishlist-prod").click(function () {
             var elem = $(this);
             $.ajax({
                 url: '@Url.Action("AddWishListItem", "Products")',
@@ -183,7 +265,7 @@
                         elem.toggleClass("text-secondary", "text-pink");
                     }
                 });
-        });
+        });*@
     })
 </script>
 
