Implemented forgot password in Ganeshop branch

--- a/WarehouseEcommerce/Views/Theme/University/User/Login.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/User/Login.cshtml
@@ -28,7 +28,7 @@
             <label class="form-check-label" for="rememberme">  remember me</label>
         </div>
         <span class="losturpwd">
-            Forget your password?
+            <a href="@Url.Action("ForgotPassword","User")">Forget your password?</a>
         </span>
     </div>
 }
