Applied forgot password for Smart theme

--- a/WarehouseEcommerce/Views/Theme/Smart/User/Login.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/User/Login.cshtml
@@ -33,7 +33,9 @@
                                     <input type="checkbox" class="rectangle ">
                                     <p class="remember-me">Remember me</p>
                                 </div>*@
-                                <a class="forget-password" role="button">Forgot Password ?</a>
+                                <span class="losturpwd">
+                                    <a href="@Url.Action("ForgotPassword","User")">Forget your password?</a>
+                                </span>
                             </div>
                             <div class="button-submit">
                                 <button type="submit" name="submitNewsletter" class="btn btn-block btn-primary login-button">Login</button>
