--- a/WarehouseEcommerce/Views/Theme/University/Orders/Payments/_CartItems.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/Payments/_CartItems.cshtml
@@ -69,6 +69,7 @@
                 </td>
                 <td class="text-center border-bottom-0">
                     <strong>@ViewBag.CurrencySymbol@(Model.TotalAmount)</strong>
+                    <input type="hidden" value="@Model.TotalAmount" id="CartTotalAmount"/>
                 </td>
             </tr>
             </tbody>
