--- a/WarehouseEcommerce/Views/Theme/University/Shared/_LoginRegisterPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_LoginRegisterPartial.cshtml
@@ -54,3 +54,23 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade basket-modal" id="modalNotificationEmail" role="dialog">
+    <div class="modal-dialog modal-lg">        
+        <div class="modal-content basket-modal-content">
+            <div class="modal-body pl-3 pr-3">
+                <button type="button" class="close mt-3" data-dismiss="modal">&times;</button>
+                <h5 class="header-ul-left-pink mb-4 p-3 clearfix">Product Notification</h5>                
+                <form autocomplete="off" class="col-12">
+                    <div class="form-group">
+                        <label class="text-muted mb-1">Enter your email.</label>
+                        <input type="email" required class="form-control form-control-lg no-asterisk" placeholder="username@address.com" id="EmailId" name="EmailId" />
+                    </div>
+                    <div class="botomBtnsec modal-footer">
+                        <button class="btmbtn pro btn-block fw-500" type="button" id="btnNotifyProd">SUBMIT</button>
+                    </div>
+                </form>                
+            </div>
+        </div>
+    </div>
+</div>
