--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -7503,3 +7503,15 @@ input[type="checkbox"] {
 .field-validation-error {
     color: red;
 }
+
+.div-order-review-total {
+    background-color: #f1f1f1;
+    font-size: 110%;
+    padding: 10px 20px;
+    border: 1px solid #f1cfcf;
+}
+.div-order-payment-iframe {
+    width: 100%;
+    height: 100%;
+    min-height: 855px;
+}
