--- a/WMS/Views/Theme/Default/PurchaseOrders/Create.cshtml
+++ b/WMS/Views/Theme/Default/PurchaseOrders/Create.cshtml
@@ -108,7 +108,7 @@
                 @Html.LabelFor(model => model.AccountContactId, htmlAttributes: new { @class = "col-md-4" })
                 <div class="col-md-8">
                     @*onchange = "AccountContactChange(event);"*@
-                    @Html.DropDownListFor(m => m.AccountContactId, ViewBag.AccountContacts as IEnumerable<SelectListItem>, new { @class = "chosen-select" })
+                    @Html.DropDownListFor(m => m.AccountContactId, ViewBag.AccountContacts as IEnumerable<SelectListItem>, "Select Account Contact", new { @class = "chosen-select" })
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center" id="dvloan">
